# autostock

./: .gitignore  CLAUDE.md  docker-compose.yml  n8n-workflow.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/agents/: candlestick_analyst.py  chart_pattern_analyst.py  keyword_extractor.py  news_collector.py  recommendation_agent.py  stock_screener.py  support_resistance_analyst.py  volume_analyst.py
backend/src/analysis/: breakout_pullback.py  candlestick_patterns.py  chart_patterns.py  scoring_engine.py  signal_aggregator.py  support_resistance.py  volume_analysis.py
backend/src/api/: app.py
backend/src/api/routes/: analysis.py  auth.py  n8n.py  news.py  paper_trading.py  pipeline.py  prices.py  recommendations.py  (+3 more)
backend/src/auth/: dependencies.py  jwt.py  oauth.py
backend/src/config/: agents.yaml  patterns.yaml  settings.py  tasks.yaml
backend/src/crews/: analysis_crew.py  news_crew.py  recommendation_crew.py  screening_crew.py
backend/src/db/: database.py
backend/src/flows/: daily_pipeline.py
backend/src/models/: db_models.py  schemas.py
backend/src/scheduler/: daily_scheduler.py
backend/src/services/: market_data_service.py  market_screener.py  news_analyzer.py  news_service.py  notification_service.py  pipeline_tracker.py
backend/src/tools/: candlestick_detector.py  chart_pattern_detector.py  db_tool.py  korean_stock_api.py  news_scraper.py  stock_mapper.py  support_resistance.py  us_stock_api.py  volume_analyzer.py
backend/src/utils/: market_hours.py  stock_name_resolver.py
(+38 files in other folders)
