[project]
name = "traderadar"
version = "0.1.0"
description = "Multi-Agent Stock Analysis System"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.86.0",
    "litellm>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "scipy>=1.13.0",
    "yfinance>=0.2.40",
    "kiwipiepy>=0.18.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "apscheduler>=4.0.0a5",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "psycopg2-binary>=2.9.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
